<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/widget_shape"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/title_shape" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/title"/>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ecard_shape"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ecard"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp">
        <TextView
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textSize="15sp"
            android:text="@string/balance_text"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />
        <TextView
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            android:text="00.00"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/balance"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <TextView
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textSize="15sp"
            android:text="@string/latest_consumption"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"
            android:text="00.00"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/latest_consumption"/>
    </LinearLayout>
    </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/spclk_shape"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/spclk"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"
                    android:textSize="15sp"
                    android:text="@string/total_clocks"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:text="00.00"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/total_clocks"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <TextView
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"
                    android:textSize="15sp"
                    android:text="@string/latest_clock"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:text="00.00"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/latest_clock"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/phyexp_shape"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/phyexp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"
                    android:textSize="15sp"
                    android:text="@string/latest_score"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:text="00.00"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/latest_score"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">
                <TextView
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"
                    android:textSize="15sp"
                    android:text="@string/latest_exp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:text="00.00"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/latest_exp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">
                <TextView
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"
                    android:textSize="15sp"
                    android:text="@string/next_exp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:text="00.00"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/next_exp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">
                <TextView
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"
                    android:textSize="15sp"
                    android:text="@string/location"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:text="00.00"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/location"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <TextView
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"
                    android:textSize="15sp"
                    android:text="@string/time"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:text="00.00"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/next_time"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
